@@ -4,7 +4,11 @@ Version 0.9.1 "Mohotani" -- Subversion
 * Added collapse option to bulletmenu, for cases where section header
 is used as parents for other content
 * Fixed bug with call to post render hook
+* Fixed nasty bug where content would have properties deleted if set
+inactive
+* Fixed permission check for setting active flag on content
 * Removed a rogue debug message
+* Updated some text in INSTALL and UPGRADE docs
 
 Version 0.9 "Marquesas" -- Tue Feb 22 2005
 -----------------
